--- a/sass/pages/portfolio-page/_filter-buttons.scss
+++ b/sass/pages/portfolio-page/_filter-buttons.scss
@@ -23,7 +23,6 @@
 	line-height: calc(26 / 16);
 	letter-spacing: 0.03em;
 	text-align: center;
-	letter-spacing: inherit;
 	background-color: $clr-bg-secondary-beta;
 	color: $clr-bg-secondary-alpha;
 	border: 0 solid transparent;
